# AGUI-A2UI-ADK

./: README.md  agent_artifact_a2ui_guide  package-lock.json  package.json  showcase.json
Readme/: 00-index.md  01-architecture-network-flow.md  02-a2ui-how-it-works.md  03-agent-modes-langgraph-vs-adk.md  04-env-and-runbook.md  05-known-issues-and-fixes.md  06-tooling-and-file-map.md
adk-agent/: .env.example  endpoint.py  pyproject.toml  run-agent.bat  run.sh
adk-agent/copilotkit_adk_agent/: agent.py  tools.py
agent/: .env.example  main.py
agent/src/: a2ui_dynamic_schema.py  llm.py
src/app/api/copilotkit/[[...slug]]/: route.ts
