[project]
name = "copilotkit-adk-agent"
version = "0.1.0"
description = "Google ADK agent mirroring the LangGraph agent functionality"
requires-python = ">=3.12"
dependencies = [
  "google-adk>=1.0.0",
  "litellm>=1.75.5",
  "python-dotenv>=0.21.0",
  "ag_ui_adk==0.6.0",
  "copilotkit>=0.1.87",
  "fastapi>=0.115.5",
  "uvicorn>=0.29.0",
]

[tool.uv]
package = false
